added tools in the header

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
   <div class='top-bar'>
     <div class='container'>
       <div class='row'>
-        <div class='eight columns'>
+        <div class='twelve columns'>
           <ul class='navigation inline-list'>
             <li><a href='/'>Home</a></li>|
             <li><a href='/releases'>Releases</a></li>|
@@ -10,11 +10,9 @@
             <li><a href='http://blog.7-a.org/search/label/OWTF'>Blog</a></li>|
             <li><a href='/#download'>Download</a></li>|
             <li><a href='http://owtf.readthedocs.org/'>Documentation</a></li>|
-            <li><a href='/contact'>Contact</a></li>
-          </ul>
-        </div>
-        <div class='eight columns text-right'>
-          <ul class='navigation inline-list'>
+            <li><a href='/contact'>Contact</a></li>|
+            <li><a href="http://owtf.github.io/online-passive-scanner/">Online Passive Scanner</a></li>|
+            <li><a href="http://owtf.github.io/boilerplate-templates/">Boilerplate Templates</a></li>
           </ul>
         </div>
       </div>
