new notification bar for trello page

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1065,3 +1065,12 @@ footer {
 .jump-to-item + .jump-to-item::before {
   content: '○ ';
 }
+
+.trello {
+  font-size:24px;
+  height: auto;
+  color:white;
+  text-align: center;
+  font-style: italic;
+  background-color: darkslategrey;
+}
