--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,27 +15,19 @@
 
     {% include footer.html %}
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-    <script src="../assets/js/toastr.min.js"></script>
+    <script src="../assets/js/jquery-1.7.1.min.js"></script>
+    <script src="../assets/js/jquery.notifyBar.js"></script>
 
     <script>
-    toastr.success("We have a Trello page! Comment and vote on new upcoming features. See it <a href='https://trello.com/b/NTwFzKBP'> here</a>")
-
-    toastr.options = {
-      "closeButton": true,
-      "debug": false,
-      "newestOnTop": false,
-      "progressBar": false,
-      "positionClass": "toast-top-full-width",
-      "preventDuplicates": false,
-      "onclick":   null,
-      "showDuration": "300",
-      "hideDuration": "1000",
-      "timeOut": "5000",
-      "extendedTimeOut": "1000",
-      "showEasing": "linear",
-      "showMethod": "fadeIn"
-    }
+      jQuery(function () {
+        jQuery.notifyBar({
+          html: "We have a <a href='https://trello.com/b/NTwFzKBP'>Trello page </a>, come suggest features and vote on ideas ideas!",
+          close: true,
+          delay: 1000000,
+          cssClass: "trello",
+          position: "bottom"
+        });
+      });
     </script>
   </body>
 
