--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
     <script>
       jQuery(function () {
         jQuery.notifyBar({
-          html: "We have a <a href='https://trello.com/b/NTwFzKBP'>Trello page </a>, come suggest features and vote on ideas ideas!",
+          html: "We have a <a href='https://trello.com/b/NTwFzKBP'>Trello page </a>, come suggest features and vote on ideas!",
           close: true,
           delay: 1000000,
           cssClass: "trello",
