--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,7 +12,8 @@
             <li><a href='http://owtf.readthedocs.org/'>Documentation</a></li>|
             <li><a href='/contact'>Contact</a></li>|
             <li><a href="http://owtf.github.io/online-passive-scanner/">Online Passive Scanner</a></li>|
-            <li><a href="http://owtf.github.io/boilerplate-templates/">Boilerplate Templates</a></li>
+            <li><a href="http://owtf.github.io/boilerplate-templates/">Boilerplate Templates</a></li>|
+            <li><a href="http://owtf.github.io/ptp/">PTP docs</a></li>
           </ul>
         </div>
       </div>
